--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-jdk8</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
     </dependencies>
 
 	<build>
